# verstor.py

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
libs/: conf-0.1.0-py3-none-any.whl  conf_py-0.1.0-py3-none-any.whl
tests/: test_storage.py
verstor/: __init__.py  storage.py  types.py
